# audio-codec

./: .gitignore  Cargo.toml  README.md
benches/: codec_bench.rs
examples/: codec.rs  resampler.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: g722.rs  g729.rs  lib.rs  opus.rs  pcma.rs  pcmu.rs  resampler.rs  telephone_event.rs
tests/: opus_channel_mismatch.rs  opus_ptime20_interop.rs
