[package]
name = "audio-codec"
version = "0.3.32"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A collection of VoIP audio codecs in Rust, including G.711, G.722, G.729, and Opus."
license = "MIT"
repository = "https://github.com/restsend/audio-codec"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "webrtc"]
categories = ["multimedia"]

[features]
opus = ["dep:opus-rs"]
default = ["opus"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
g729-sys = "0.1.2"
opus-rs = { version = "0.1.17", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
opusic-sys = "0.5.8"

[[bench]]
name = "codec_bench"
harness = false
